-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Critical - P2
-
Affects Version/s: None
-
Component/s: None
-
Query Integration
-
ALL
-
-
None
-
None
-
None
-
None
-
None
-
None
-
None
The following query succeeds on a regular collection, but uasserts on a time-series collection.
This query doesn't make much sense since it cannot match any documents. However for computer generated queries it's possible a user can create this
Looks different from SERVER-99768, since that involves the bounded sorter and wildcard indexes. Though they both involve errors from FieldPath
- related to
-
SERVER-99768 Queries on a timeseries collection with a wildcard index can incorrectly uassert
-
- Closed
-
-
SERVER-106623 Investigate match_expression::addDependencies() creating empty fields when not needed
-
- Closed
-
-
SERVER-112844 Nested $elemMatch query can uassert when multiple predicates are present
-
- Closed
-
-
SERVER-89308 Create query property tester
-
- Closed
-
-
SERVER-103381 Reenable PBT time-series testing
-
- Closed
-