SERVER-101795 Deal with empty paths within timeseries sbe pushdown (#37494)

GitOrigin-RevId: 85f068c74b358beb916c77c6fe4828f0fea84065